# esp32s3

./: CMakeLists.txt  README.md  sdkconfig
components/bus/: i2c_bus.c  i2s_lcd_esp32s2_driver.c
components/i2c_bus/: i2c_device.c  i2c_device.h
components/mango/: CMakeLists.txt  component.mk
components/mango/app/: app.c  storage_app.c  uart_app.c  uart_parse.c  uart_parse.h
components/mango/arch/esp32/: arch_chip.c  arch_chip.h  arch_crash.c  arch_crypto.c  arch_crypto.h  arch_dbg.c  arch_dbg.h  arch_flash.c  arch_flash.h  arch_flash_yee.c  arch_flash_yee.h  arch_net.c  arch_net.h  arch_os.c  arch_os.h  arch_os_yee.c  arch_os_yee.h  arch_ota.c  arch_ota.h  arch_psm.c  arch_psm.h  arch_psm_yee.c  arch_psm_yee.h  arch_serial.c  arch_serial.h  arch_time.c
components/mango/arch/misc/: soft_crc.c  soft_crc.h  util.c  util.h
components/mango/bioc/: bioc.c  bioc.h  bioc_iomux.c  bioc_iomux.h  bioc_timer.c  bioc_timer.h  lan_ctrl.c  lan_ctrl.h  lan_discover.c  list.h
components/mango/button/: button.c  button.h
components/mango/gatt_server/: gatts_server.c  gatts_server.h
components/mango/knob/: knob_switch.c
components/mango/lcd/: font.c  font.h  lcd.c  lcd.h
components/mango/motor/: motor.c  motor.h  stepper.c  stepper.h
components/mango/ring_buffer/: ring_buffer.c  ring_buffer.h
components/mango/spi/: etss_spec.c  etss_spec.h  spi_slave.c  spi_slave.h
components/mango/wifi_net/: wifi_setting.h  wifi_softap.c  wifi_station.c
components/screen/: screen_driver.h
main/: CMakeLists.txt  main.c  screen.c
main/GUI/: ui.c  ui.h
(+280 files in other folders)
